salt/dev/iptables/files/iptables
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 4505:4506 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 53,67,69 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 11211 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 11211 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 25672,4369,5672 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 3306,4567,4568,4444 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 8083,8086,8087 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 9200,9300 -j ACCEPT
-A INPUT -p igmp -j ACCEPT
-A INPUT -m addrtype --dst-type MULTICAST -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 5404:5405 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 2224 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 24007,111,38465:38485,49152:49155,2049 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 111 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 35357,5000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 9191,9292 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 8773:8775,16509,6080,6082,5900:5999 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9696 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 8776,3260 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 3260 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 8777,199 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 161 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 8004 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m multiport --dports 4789 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --sport 1025:65535 -m multiport --dports 80,443,8001,8002,8080,8686 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p vrrp -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p gre -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
